fix settings not show on small screens (image-collage-v2)

--- a/image-collage/v2/index.css
+++ b/image-collage/v2/index.css
@@ -23,6 +23,11 @@ body {
 	cursor: pointer;
 }
 
+.description {
+	height: 60px;
+	overflow: auto;
+}
+
 .tags { 
   -ms-overflow-style: none;
   scrollbar-width: none;
